# weather-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
migrations/: 20220206_01_h16Ta-init.rollback.sql  20220206_01_h16Ta-init.sql
src/: config.py  logger.py  main.py  migrate.py
src/bot/: __init__.py  states.py
src/bot/handlers/: user.py  weather.py
src/bot/keyboards/: buttons.py  keyboards.py
src/middleware/: client.py  db.py
src/open_weather_map/: __init__.py  api.py  client.py  consts.py  models.py
src/services/: models.py  repo.py  user.py  weather.py  weather_widget.py
