[tool.poetry]
name = "weather-bot"
version = "0.1.0"
description = ""
authors = ["Stanislav Rush <911rush@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
aiogram = "^3.0.0b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
